# nevron

./: .dockerignore  .env.dev  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  codecov.yml  coverage.lcov  docker-compose.yml  mkdocs.yml  persistent_q_table.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.md  feature_request.yaml  misc.md  misc.yaml
.github/workflows/: automerge.yaml  deploy-docs.yml  deploy-docs.yml.txt  docker.yml  main.yml  release-please.yml
docs/: about.md  deployment.md  faq.md  index.md  quickstart.md
docs/agent/: discord.md  feedback.md  github.md  google_drive.md  lens_protocol.md  llama.md  llm.md  memory.md  overview.md  planning.md  shopify.md  slack.md  spotify.md  tavily.md  tools.md  whatsapp.md  workflows.md  youtube.md
docs/development/: contributing.md  environment.md  setup.md  workflow.md
qdrant_storage/: raft_state.json
qdrant_storage/collections/agent_memory/0/: replica_state.json
qdrant_storage/collections/agent_memory/0/segments/5c5e48ad-4c48-4233-b382-56814fb4ac1a/: IDENTITY  LOG
qdrant_storage/collections/agent_memory/0/segments/5c5e48ad-4c48-4233-b382-56814fb4ac1a/payload_index/: IDENTITY  LOG
qdrant_storage/collections/agent_memory/0/segments/82a415cb-8175-44b1-af07-0c8affbfdf0a/: IDENTITY  LOG
qdrant_storage/collections/agent_memory/0/segments/82a415cb-8175-44b1-af07-0c8affbfdf0a/payload_index/: IDENTITY  LOG
qdrant_storage/collections/agent_memory/0/segments/caa8a52a-c5d7-46d5-a347-641637d35fdf/: IDENTITY  LOG
qdrant_storage/collections/agent_memory/0/segments/caa8a52a-c5d7-46d5-a347-641637d35fdf/payload_index/: IDENTITY  LOG
qdrant_storage/collections/agent_memory/0/segments/d964373b-2482-45f1-870e-b9a7e576e3cc/: IDENTITY  LOG
qdrant_storage/collections/agent_memory/0/segments/d964373b-2482-45f1-870e-b9a7e576e3cc/payload_index/: IDENTITY  LOG
src/: agent.py  main.py  memory_module.py  planning_module.py  utils.py
src/core/: action_enum.py  config.py  defs.py  exceptions.py  state_enum.py
src/feedback/: feedback_module.py
src/llm/: embeddings.py  llm.py  oai_client.py
src/llm/providers/: anthropic.py  llama.py  oai.py  xai.py
src/memory/: memory_module.py
src/memory/backends/: chroma.py  qdrant.py
src/planning/: planning_module.py
src/tools/: discord.py  get_signal.py  github.py  google_drive.py  lens_protocol.py  perplexity.py  search_with_perplexity.py  shopify.py  slack.py  spotify.py  tavily.py  tg.py  twitter.py  whatsapp.py  youtube.py
src/workflows/: analyze_signal.py  news.py  research_news.py
tests/: test_agent.py  test_agent_runtime.py  test_main.py  test_utils.py
tests/core/: test_config.py
tests/feedback/: test_feedback_module.py
tests/llm/: test_embeddings.py  test_llm.py
tests/llm/providers/: test_anthropic.py  test_llama.py  test_oai.py  test_xai.py
tests/memory/: test_memory_module.py
tests/memory/backends/: test_chroma.py  test_qdrant.py
tests/planning/: test_planning_module.py
tests/tools/: test_discord.py  test_get_signal.py  test_github.py  test_google_drive.py  test_lens_protocol.py  test_perplexity.py  test_shopify.py  test_slack.py  test_spotify.py  test_tavily.py  test_tg.py  test_twitter.py  test_whatsapp.py  test_youtube.py
tests/workflows/: test_analyze_signal.py  test_research_news.py
