[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nevron"
version = "0.1.0"
authors = []
description = "Nevron AI Agent"
readme = "README.md"
keywords = ["agent", "ai"]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: GNU General Public License v3.0",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/axioma-ai-labs/nevron"
Documentation = ""

[tool.mypy]
# Paths to search for import modules, including stubs.
mypy_path = ["stubs"]

# Treats missing imports as errors.
ignore_missing_imports = true

# Runs type checking on all files, even those without type hints.
check_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
env = [
    "ENVIRONMENT=ci",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"