[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nevron"
version = "0.1.0"
authors = []
description = "Nevron AI Agent"
readme = "README.md"
keywords = ["agent", "ai"]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: GNU General Public License v3.0",
  "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "numpy>=1.26.0",
    "openai>=1.3.0",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.5.0",
    "python-telegram-bot>=20.7",
    "telegramify-markdown>=0.11.0",
    "tweepy>=4.14.0",
    "pillow>=10.1.0",
    "lxml-html-clean>=0.2.12",
    "requests-html>=0.10.0",
    "qdrant-client[http]>=1.6.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocs-macros-plugin>=1.0.4",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "anthropic>=0.7.0",
    "chromadb>=0.4.18"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.7.0",
    "isort>=5.12.0",
    "ruff>=0.1.6",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0"
]

[project.urls]
Homepage = "https://github.com/axioma-ai-labs/nevron"
Documentation = "https://nevron.ai"

[tool.mypy]
# Paths to search for import modules, including stubs.
mypy_path = ["stubs"]

# Treats missing imports as errors.
ignore_missing_imports = true

# Runs type checking on all files, even those without type hints.
check_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
env = [
    "ENVIRONMENT=ci",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"